# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--1.0
#

2004-10-07 21:17:37 GMT	John Goerzen <jgoerzen@complete.org>	patch-46

    Summary:
      Initial development complete
    Revision:
      missingh--head--1.0--patch-46


    modified files:
     ChangeLog


2004-10-07 21:10:37 GMT	John Goerzen <jgoerzen@complete.org>	patch-45

    Summary:
      Initial version of syslog handler
    Revision:
      missingh--head--1.0--patch-45


    new files:
     libsrc/MissingH/Logging/Handler/.arch-ids/=id
     libsrc/MissingH/Logging/Handler/Syslog.hs

    modified files:
     ChangeLog libsrc/MissingH/Logging/Handler.hs

    new directories:
     libsrc/MissingH/Logging/Handler
     libsrc/MissingH/Logging/Handler/.arch-ids


2004-10-07 19:54:47 GMT	John Goerzen <jgoerzen@complete.org>	patch-44

    Summary:
      Checkpointing logging work
    Revision:
      missingh--head--1.0--patch-44


    modified files:
     ChangeLog Makefile libsrc/MissingH/Logging.hs
     libsrc/MissingH/Logging/Handler.hs


2004-10-07 16:12:35 GMT	John Goerzen <jgoerzen@complete.org>	patch-43

    Summary:
      Added initial logging infrastructure
    Revision:
      missingh--head--1.0--patch-43


    new files:
     libsrc/MissingH/Logging.hs
     libsrc/MissingH/Logging/.arch-ids/=id
     libsrc/MissingH/Logging/Handler.hs

    modified files:
     ChangeLog Makefile {arch}/=tagging-method

    new directories:
     libsrc/MissingH/Logging libsrc/MissingH/Logging/.arch-ids


2004-10-07 02:47:38 GMT	John Goerzen <jgoerzen@complete.org>	patch-42

    Summary:
      rules now runs tests
    Revision:
      missingh--head--1.0--patch-42


    modified files:
     ChangeLog debian/rules


2004-10-07 02:44:50 GMT	John Goerzen <jgoerzen@complete.org>	patch-41

    Summary:
      Switched to dh_haskell and added hugs building
    Revision:
      missingh--head--1.0--patch-41


    removed files: